hphp/hack/test/typecheck/is_expression/tconst5.php.exp
File "tconst5.php", line 16, characters 13-24:
Invalid "is" expression hint (Typing[4195])
File "tconst5.php", line 12, characters 23-23:
The "is" operator cannot be used with the abstract type constant T because it is not marked <<__Enforceable>>
